[Quartz] Hardcode screen resolution for text at 96.0.

It seems that CoreText is internally calibrated for this, see
https://bugzilla.gnome.org/show_bug.cgi?id=787867 for a detailed
discussion.